Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-47811

MagmaKVStore - Stat doc not recreated after collection resurrection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.1.0
    • 7.1.0
    • couchbase-bucket
    • None
    • Triaged
    • 1
    • No
    • KV-Engine Sprint 2021 August

    Description

      Found with NexusKVStore - MB-47604.

      The first flush to a dropped collection after a collection resurrection results in no stat doc being persisted for the given collection. Looks like the stats correct themselves on the next updated to the collection, but if we restarted then they'd be incorrect afterwards and the item count and disk sizes would potentially underflow.

      I think we need to move the meta update that deletes the stats doc to before the persisting of the stats doc (if appropriate) to ensure that we don't "create" then delete where we should logically be deleting then creating it.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ben.huddleston Ben Huddleston
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty